<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            </android.support.v7.widget.Toolbar>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="15dp">


                <TextView
                    android:id="@+id/title"
                    android:text="@string/about_app_title"
                    android:textSize="22sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/purpose_title"
                    android:textSize="20sp"
                    android:text="@string/purpose_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/purpose_text"
                    android:textSize="16sp"
                    android:text="@string/purpose_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/usage_title"
                    android:text="@string/usage_title"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/usage_text"
                    android:text="@string/usage_text"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/future_title"
                    android:text="@string/future_title"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/future_text"
                    android:text="@string/future_text"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

<android.support.design.widget.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>